# skill-context-manager

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  recipes.yaml  requirements.txt  skill.sh  test-retrieval.py
configs/: default.yaml
docs/: ARCHITECTURE.md  MCP-INTEGRATION.md
scripts/: benchmark.sh  demo.sh  download-embedding-model.py  install-mcp-hermes.sh  install-mcp-opencode.sh  install.sh  scm-mcp.sh  test-mcp.py  train-ltr.py
src/scm/: __init__.py  adaptive.py  cli.py  db.py  dedup.py  feedback.py  graph.py  indexer.py  ltr.py  mcp_server.py  mcp_setup.py  models.py  optimizer.py  reranker.py  retriever.py  security.py  session.py  tracker.py
tests/: test_adaptive.py  test_dedup.py  test_graph.py  test_indexer.py  test_indexer_dedup.py  test_mcp_setup.py  test_models.py  test_optimizer.py  test_regression.py  test_reranker.py  test_retriever.py  test_session_feedback.py  test_tracker.py
