[project]
name = "scm"
version = "0.7.0"
description = "Context-aware skill selection for AI agents — solves 'too many skills' problem"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Mavis2103", email = "taquanvku@gmail.com"},
]

dependencies = [
    # Core: lightweight runtime deps.
    # - mcp: the MCP server is a headline feature, so the SDK ships by default
    # - PyYAML: robust SKILL.md frontmatter parsing (naive fallback exists but is lossy)
    "mcp>=1.0",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
full = [
    "sentence-transformers>=3.0,<4.0",
    "transformers>=4.40,<5.0",
    "torch>=2.0,<3.0",
]
light = [
    "sentence-transformers>=3.0,<4.0",
]
http = [
    # Required only for `scm mcp start --http` (HTTP/SSE transport)
    "uvicorn>=0.30",
]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]

[project.scripts]
scm = "scm.cli:cli"

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"
