[project]
name = "scm"
version = "0.8.2"
description = "Context-aware skill selection for AI agents — solves 'too many skills' problem"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Mavis2103", email = "taquanvku@gmail.com"},
]

dependencies = [
    # Core: lightweight runtime deps.
    "mcp>=1.0",
    "PyYAML>=6.0",
    # ponytail: pin numpy<2 for sentence-transformers compatibility
    "numpy>=1.21,<2",
]

[project.optional-dependencies]
http = [
    # Required only for `scm mcp start --http` (HTTP/SSE transport)
    "uvicorn>=0.30",
]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]

[project.scripts]
scm = "scm.cli:cli"

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"
